--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
-    "serverless-http": "^1.5.5"
+    "serverless-http": "^1.5.5",
+    "request": "^2.85.0",
+    "request-promise": "^4.2.2"
   },
   "devDependencies": {
     "@types/express": "^4.11.1",
