--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.229.1",
+    "body-parser": "^1.18.2",
     "express": "^4.16.3",
-    "serverless-http": "^1.5.5",
     "request": "^2.85.0",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "serverless-http": "^1.5.5"
   },
   "devDependencies": {
     "@types/express": "^4.11.1",
